fix alignment

--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,6 @@ body {
 }
 
 #app {
-  text-align: center;
   height: 100vh;
 }
 
